moved button hover to media query to avoid sticky hover effect on smaller touch devices

--- a/css/style.css
+++ b/css/style.css
@@ -40,10 +40,6 @@ button {
     background-color:#fff;
 }
 
-button:hover{
-    background-color: yellow;
-    border: none;
-}
 
 button:focus {
     outline: none;
@@ -71,3 +67,11 @@ button:focus {
         min-height: 600px;
     }
 }
+
+@media (min-width: 1024px){
+    button:hover{
+    background-color: yellow;
+    border: none;
+}
+}    
+
